# SFApp

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  HowTo.html  README.html  README.md  SFapp.py  datasets.html  docker-compose.yml  eefun.py  packages.txt  pyproject.toml  readme.txt  style.css
.ipynb_checkpoints/: SFapp-checkpoint.py  eefun-checkpoint.py
.streamlit/: config.toml
azure/: DEPLOY.md  azuredeploy.json
