[tool.poetry]
name = "sfapp"
version = "1.0.0"
description = "This tool provides users with a solution to select relevant areas and locations where they can conduct the validation trials for their Minimum Viable Products (MVP’s)."
authors = [
    "Regina Kavive",
    "Eduardo B",
    "Munywele S"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
